PRKL/work/HeroCParser.py
# Generated from HeroC.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class HeroCParser ( Parser ):

    grammarFileName = "HeroC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'do'", "'else'", 
                     "'for'", "'if'", "'long'", "'return'", "'sizeof'", 
                     "'while'", "'!'", "'!='", "'%'", "'%='", "'&'", "'&&'", 
                     "'&='", "'*'", "'*='", "'+'", "'++'", "'+='", "'-'", 
                     "'--'", "'-='", "'/'", "'/='", "':'", "'<'", "'<<'", 
                     "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", 
                     "'>>='", "'?'", "'^'", "'^='", "'|'", "'|='", "'||'", 
                     "'~'", "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "Break", "Continue", "Do", "Else", "For", 
                      "If", "Long", "Return", "Sizeof", "While", "Not", 
                      "NotEqual", "Mod", "ModAssign", "And", "AndAnd", "AndAssign", 
                      "Star", "StarAssign", "Plus", "PlusPlus", "PlusAssign", 
                      "Minus", "MinusMinus", "MinusAssign", "Div", "DivAssign", 
                      "Colon", "Less", "LeftShift", "LeftShiftAssign", "LessEqual", 
                      "Assign", "Equal", "Greater", "GreaterEqual", "RightShift", 
                      "RightShiftAssign", "Question", "Caret", "XorAssign", 
                      "Or", "OrAssign", "OrOr", "Tilde", "LeftParen", "RightParen", 
                      "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
                      "Semi", "Comma", "ID", "Constant", "OctalConstant", 
                      "DecConstant", "HexConstant", "Char", "String", "Whitespace", 
                      "Newline", "BlockComment" ]

    RULE_prog = 0
    RULE_program = 1
    RULE_declaration = 2
    RULE_initDeclaratorList = 3
    RULE_initDeclarator = 4
    RULE_initLongDeclarator = 5
    RULE_initLongListDeclarator = 6
    RULE_initializer = 7
    RULE_initializerList = 8
    RULE_pointer = 9
    RULE_functionDefinition = 10
    RULE_declarationList = 11
    RULE_statement = 12
    RULE_compoundStatement = 13
    RULE_blockItemList = 14
    RULE_blockItem = 15
    RULE_expressionStatement = 16
    RULE_selectionStatement = 17
    RULE_iterationStatement = 18
    RULE_jumpStatement = 19
    RULE_primaryExpression = 20
    RULE_unaryOperator = 21
    RULE_unaryExpression = 22
    RULE_postfixExpression = 23
    RULE_argumentExpressionList = 24
    RULE_multiplicativeExpression = 25
    RULE_additiveExpression = 26
    RULE_shiftExpression = 27
    RULE_relationalExpression = 28
    RULE_equalityExpression = 29
    RULE_andExpression = 30
    RULE_exclusiveOrExpression = 31
    RULE_inclusiveOrExpression = 32
    RULE_logicalAndExpression = 33
    RULE_logicalOrExpression = 34
    RULE_conditionalExpression = 35
    RULE_assignmentExpression = 36
    RULE_assignmentOperator = 37
    RULE_functionCallExpression = 38
    RULE_functionParameterList = 39
    RULE_expression = 40

    ruleNames =  [ "prog", "program", "declaration", "initDeclaratorList", 
                   "initDeclarator", "initLongDeclarator", "initLongListDeclarator", 
                   "initializer", "initializerList", "pointer", "functionDefinition", 
                   "declarationList", "statement", "compoundStatement", 
                   "blockItemList", "blockItem", "expressionStatement", 
                   "selectionStatement", "iterationStatement", "jumpStatement", 
                   "primaryExpression", "unaryOperator", "unaryExpression", 
                   "postfixExpression", "argumentExpressionList", "multiplicativeExpression", 
                   "additiveExpression", "shiftExpression", "relationalExpression", 
                   "equalityExpression", "andExpression", "exclusiveOrExpression", 
                   "inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", 
                   "conditionalExpression", "assignmentExpression", "assignmentOperator", 
                   "functionCallExpression", "functionParameterList", "expression" ]

    EOF = Token.EOF
    Break=1
    Continue=2
    Do=3
    Else=4
    For=5
    If=6
    Long=7
    Return=8
    Sizeof=9
    While=10
    Not=11
    NotEqual=12
    Mod=13
    ModAssign=14
    And=15
    AndAnd=16
    AndAssign=17
    Star=18
    StarAssign=19
    Plus=20
    PlusPlus=21
    PlusAssign=22
    Minus=23
    MinusMinus=24
    MinusAssign=25
    Div=26
    DivAssign=27
    Colon=28
    Less=29
    LeftShift=30
    LeftShiftAssign=31
    LessEqual=32
    Assign=33
    Equal=34
    Greater=35
    GreaterEqual=36
    RightShift=37
    RightShiftAssign=38
    Question=39
    Caret=40
    XorAssign=41
    Or=42
    OrAssign=43
    OrOr=44
    Tilde=45
    LeftParen=46
    RightParen=47
    LeftBracket=48
    RightBracket=49
    LeftBrace=50
    RightBrace=51
    Semi=52
    Comma=53
    ID=54
    Constant=55
    OctalConstant=56
    DecConstant=57
    HexConstant=58
    Char=59
    String=60
    Whitespace=61
    Newline=62
    BlockComment=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(HeroCParser.ProgramContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = HeroCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HeroCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(HeroCParser.DeclarationContext,i)


        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HeroCParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(HeroCParser.FunctionDefinitionContext,i)


        def getRuleIndex(self):
            return HeroCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HeroCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HeroCParser.Long]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 84
                    self.declaration()
                    self.state = 87 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HeroCParser.Long):
                        break

                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 89
                    self.functionDefinition()
                    self.state = 92 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HeroCParser.ID):
                        break

                pass
            elif token in [HeroCParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 94
                    self.functionDefinition()
                    self.state = 97 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HeroCParser.ID):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Long(self):
            return self.getToken(HeroCParser.Long, 0)

        def initDeclaratorList(self):
            return self.getTypedRuleContext(HeroCParser.InitDeclaratorListContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = HeroCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(HeroCParser.Long)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HeroCParser.Star or _la==HeroCParser.ID:
                self.state = 102
                self.initDeclaratorList()


            self.state = 105
            self.match(HeroCParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitDeclaratorListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initDeclarator(self):
            return self.getTypedRuleContext(HeroCParser.InitDeclaratorContext,0)


        def initDeclaratorList(self):
            return self.getTypedRuleContext(HeroCParser.InitDeclaratorListContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_initDeclaratorList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclaratorList" ):
                return visitor.visitInitDeclaratorList(self)
            else:
                return visitor.visitChildren(self)




    def initDeclaratorList(self):

        localctx = HeroCParser.InitDeclaratorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_initDeclaratorList)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.initDeclarator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.initDeclarator()
                self.state = 109
                self.match(HeroCParser.Comma)
                self.state = 110
                self.initDeclaratorList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitDeclaratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initLongListDeclarator(self):
            return self.getTypedRuleContext(HeroCParser.InitLongListDeclaratorContext,0)


        def pointer(self):
            return self.getTypedRuleContext(HeroCParser.PointerContext,0)


        def initLongDeclarator(self):
            return self.getTypedRuleContext(HeroCParser.InitLongDeclaratorContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_initDeclarator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclarator" ):
                return visitor.visitInitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def initDeclarator(self):

        localctx = HeroCParser.InitDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initDeclarator)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HeroCParser.Star:
                    self.state = 114
                    self.pointer()


                self.state = 117
                self.initLongListDeclarator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HeroCParser.Star:
                    self.state = 118
                    self.pointer()


                self.state = 121
                self.initLongDeclarator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitLongDeclaratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HeroCParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(HeroCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_initLongDeclarator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitLongDeclarator" ):
                return visitor.visitInitLongDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def initLongDeclarator(self):

        localctx = HeroCParser.InitLongDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initLongDeclarator)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(HeroCParser.ID)
                self.state = 125
                self.match(HeroCParser.Assign)
                self.state = 126
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(HeroCParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitLongListDeclaratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HeroCParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HeroCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HeroCParser.ExpressionContext,i)


        def initializerList(self):
            return self.getTypedRuleContext(HeroCParser.InitializerListContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_initLongListDeclarator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitLongListDeclarator" ):
                return visitor.visitInitLongListDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def initLongListDeclarator(self):

        localctx = HeroCParser.InitLongListDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initLongListDeclarator)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(HeroCParser.ID)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 131
                    self.match(HeroCParser.LeftBracket)
                    self.state = 132
                    self.expression()
                    self.state = 133
                    self.match(HeroCParser.RightBracket)
                    self.state = 137 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HeroCParser.LeftBracket):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(HeroCParser.ID)
                self.state = 140
                self.match(HeroCParser.Assign)
                self.state = 141
                self.match(HeroCParser.LeftBrace)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HeroCParser.Sizeof) | (1 << HeroCParser.Not) | (1 << HeroCParser.And) | (1 << HeroCParser.Star) | (1 << HeroCParser.Plus) | (1 << HeroCParser.PlusPlus) | (1 << HeroCParser.Minus) | (1 << HeroCParser.MinusMinus) | (1 << HeroCParser.Tilde) | (1 << HeroCParser.LeftParen) | (1 << HeroCParser.LeftBrace) | (1 << HeroCParser.ID) | (1 << HeroCParser.Constant) | (1 << HeroCParser.String))) != 0):
                    self.state = 142
                    self.initializerList()


                self.state = 145
                self.match(HeroCParser.RightBrace)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.match(HeroCParser.ID)
                self.state = 151 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 147
                    self.match(HeroCParser.LeftBracket)
                    self.state = 148
                    self.expression()
                    self.state = 149
                    self.match(HeroCParser.RightBracket)
                    self.state = 153 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HeroCParser.LeftBracket):
                        break

                self.state = 155
                self.match(HeroCParser.Assign)
                self.state = 156
                self.match(HeroCParser.LeftBrace)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HeroCParser.Sizeof) | (1 << HeroCParser.Not) | (1 << HeroCParser.And) | (1 << HeroCParser.Star) | (1 << HeroCParser.Plus) | (1 << HeroCParser.PlusPlus) | (1 << HeroCParser.Minus) | (1 << HeroCParser.MinusMinus) | (1 << HeroCParser.Tilde) | (1 << HeroCParser.LeftParen) | (1 << HeroCParser.LeftBrace) | (1 << HeroCParser.ID) | (1 << HeroCParser.Constant) | (1 << HeroCParser.String))) != 0):
                    self.state = 157
                    self.initializerList()


                self.state = 160
                self.match(HeroCParser.RightBrace)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitializerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HeroCParser.ExpressionContext,0)


        def initializerList(self):
            return self.getTypedRuleContext(HeroCParser.InitializerListContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_initializer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = HeroCParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initializer)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(HeroCParser.LeftBrace)
                self.state = 166
                self.initializerList()
                self.state = 167
                self.match(HeroCParser.RightBrace)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.match(HeroCParser.LeftBrace)
                self.state = 170
                self.initializerList()
                self.state = 171
                self.match(HeroCParser.Comma)
                self.state = 172
                self.match(HeroCParser.RightBrace)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitializerListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initializer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HeroCParser.InitializerContext)
            else:
                return self.getTypedRuleContext(HeroCParser.InitializerContext,i)


        def getRuleIndex(self):
            return HeroCParser.RULE_initializerList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializerList" ):
                return visitor.visitInitializerList(self)
            else:
                return visitor.visitChildren(self)




    def initializerList(self):

        localctx = HeroCParser.InitializerListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initializerList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.initializer()
            self.state = 181
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 177
                    self.match(HeroCParser.Comma)
                    self.state = 178
                    self.initializer() 
                self.state = 183
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PointerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HeroCParser.RULE_pointer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)




    def pointer(self):

        localctx = HeroCParser.PointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pointer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 184
                self.match(HeroCParser.Star)
                self.state = 187 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==HeroCParser.Star):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HeroCParser.ID, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(HeroCParser.CompoundStatementContext,0)


        def declarationList(self):
            return self.getTypedRuleContext(HeroCParser.DeclarationListContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_functionDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = HeroCParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(HeroCParser.ID)
            self.state = 190
            self.match(HeroCParser.LeftParen)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HeroCParser.ID:
                self.state = 191
                self.declarationList()


            self.state = 194
            self.match(HeroCParser.RightParen)
            self.state = 195
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HeroCParser.ID, 0)

        def declarationList(self):
            return self.getTypedRuleContext(HeroCParser.DeclarationListContext,0)


        def getRuleIndex(self):
            return HeroCParser.RULE_declarationList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationList" ):
                return visitor.visitDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def declarationList(self):
